# clickup-fast-mcp

./: README.md  fastmcp.json  pyproject.toml  server.py
scripts/: clickup_stdio_bridge.mjs
